# amfoss-tasks

./: README.md
Introspection/: README.md
task-0/: README.md
task-1/: README.md
task-14/: README.md
task-15/: Project Euler#1.py  Project Euler#2.py
task-2/: README.md
task-3/: Good Strings.py  Great Eye.py  Homework Time.py  Infinity Stones.py  Jack Jack code.py  Minimum Ninja Sum.py  Pizza Fest.py  README.md  Rich Tony Poor Spider.py  Ryuk And His Death Note.py  The 'D'.py
task-4/: MathQuiz.java  README.md
task-5/: Cargo.toml  README.md  main.rs
task-7/: README.md
task-8/: README.md  script.py
task-9/: README.md  Spammer_Spaghetti.js
